<resources>
    <string name="app_name">Rawster</string>
    <string name="brandName">Rawster</string>
    <string name="usernameLabel">Username</string>
    <string name="passwordLabel">Password</string>
    <string name="rePasswordLabel">Confirm Password</string>
    <string name="logInButton">Log In</string>
    <string name="signUpQuestion">Don’t have an account?</string>
    <string name="signUpButton">Sign Up</string>
    <string name="logInQuestion">Already have an account?</string>
    <string name="fab_content_desc">Adds a new item</string>

    <string name="item_title">Flour</string>
    <string name="item_quantity">15</string>
    <string name="item_quantity_units">Lbs.</string>
    <string name="item_update_button">Update</string>
    <string name="item_delete_button">Delete</string>

    <string name="add_item_dialog_header">Add Item</string>
    <string name="add_item_title">Item Title</string>
    <string name="add_item_quantity">Item Quantity</string>
    <string name="add_item_units">Quantity Units</string>
    <string name="add_item_add_button">Add</string>
    <string name="add_item_cancel_button">Cancel</string>

    <string name="sms_status_label">SMS Status</string>
    <string name="sms_status">Inactive</string>
    <string name="sms_description">To improve your experience, Rawster can alert you in case of low inventory!</string>
    <string name="sms_request">Activate SMS</string>
</resources>