<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gainsboro"
    tools:context=".SMSActivity" >

    <TextView
        android:id="@+id/brandName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/grand_hotel"
        android:text="@string/brandName"
        android:textColor="@color/old_rose"
        android:textSize="40sp"
        android:textStyle="bold"
        android:onClick="onLogoClick"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/logout_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="15dp"
        android:background="@color/gainsboro"
        android:src="@drawable/ic_baseline_logout_24"
        android:tint="@color/raisin_black"
        android:onClick="onLogOutClick"
        app:layout_constraintBottom_toBottomOf="@id/brandName"
        app:layout_constraintEnd_toEndOf="parent" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/raleway"
        android:text="@string/sms_description"
        android:textAlignment="center"
        android:textColor="@color/raisin_black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/brandName" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="16dp"
        android:background="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch_sms"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:checked="false"
                android:text="@string/sms_request"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/smsStatusLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/raleway"
        android:text="@string/sms_status_label"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/smsStatus"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card" />
    <TextView
        android:id="@+id/smsStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/raleway"
        android:text="@string/sms_status"
        android:textSize="20sp"
        android:textFontWeight="800"
        android:textColor="@color/raisin_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/smsStatusLabel"
        app:layout_constraintBaseline_toBaselineOf="@id/smsStatusLabel" />

</androidx.constraintlayout.widget.ConstraintLayout>